# oslo-method-software

./: .gitignore  README.md
mama/: CMakeLists.txt  Makeconf  Makefile  README
mama/doc/: CalibLines  hands_on_mama  mama.hlp
mama/include/minig_x/: minig.h  util.h
mama/include/sirius/: buffer_defs.h  gsdims.h  ipc_defs.h  offspec_defs.h  redmem_defs.h  spec_defs.h  specdims.h  specpointers.h
mama/resp/afrodite_clover2015/: cmp100  cmp1000  cmp1200  cmp1400  cmp1600  cmp1800  cmp200  cmp2000  cmp2200  cmp2400  cmp2600  cmp2800  cmp3000  cmp3200  cmp3400  cmp3600  cmp3800  cmp400  cmp4000  cmp4200  cmp4400  cmp4600  cmp4800  cmp5000  cmp5200  cmp5400  cmp5600  cmp5800  cmp600  cmp6000  cmp6200  cmp6400  cmp6600  cmp6800  cmp7000  cmp800
mama/resp/afrodite_labr2015/: afrodite.numbers  cmp100  cmp1000  cmp1200  cmp1400  cmp1600  cmp1800  cmp200  cmp2000  cmp2200  cmp2400  cmp2600  cmp2800  cmp3000  cmp3200  cmp3400  cmp3600  cmp3800  cmp400  cmp4000  cmp4200  cmp4400  cmp4600  cmp4800  cmp5000  cmp5200  cmp5400  cmp5600  cmp5800  cmp600  cmp6000  cmp6200  cmp6400  cmp6600  cmp6800  cmp7000  cmp800  resp.csv
mama/resp/clover2015v1/: README.rtf  geant_clover.xlsx  peakfit.out  ss100  ss1000  ss10000  ss1500  ss200  ss2000  ss3000  ss400  ss4000  ss600  ss6000  ss800  ss8000
mama/resp/clover2015v2/: README.rtf  geant_clover.xlsx  peakfit.out  sm100  sm1000  sm10000  sm1332  sm1500  sm200  sm2000  sm3000  sm400  sm4000  sm600  sm6000  sm800  sm8000
mama/resp/gretina2018/: Re_ GRETINA Response.rtf  geant_gretina.xlsx  remco_resp  s100  s1000  s1330  s1500  s200  s2000  s3000  s400  s4000  s600  s6000  s800  s8000  sm100  sm1000  sm1330  sm1500  sm200  sm2000  sm3000  sm400  sm4000  sm600  sm6000  sm800  sm8000  th22mama.C  th22mama_C_ACLiC_dict_rdict.pcm  th22mama_hist.C  white_histos.root
mama/resp/hyperion2019/: cmp100  cmp1000  cmp10000  cmp1332  cmp1500  cmp200  cmp2000  cmp3000  cmp400  cmp4000  cmp600  cmp6000  cmp800  cmp8000
mama/resp/jurogam2_2014/: cmp1238  cmp1836  cmp344  cmp846  cmp898  geant_clover.xlsx  peakfit.out  sources.xlsx
mama/resp/labr2012/: alflabr3_12C.m  alflabr3_28Si.m  alflabr3_56Fe_wide.m  alflabr56Fe_narrow.m  alflabr57Fe_narrow.m  m_alflabr3_28Si_time.m  raw1238  raw1779  raw2839  raw3089  raw4497  raw6130  raw847  raw9900  sc1238  sc1779  sc2839  sc3089  sc4497  sc6130  sc6130_cedge  sc847  sc9900  sc9900_cedge
mama/resp/myresp/: cmp1000  cmp1200  cmp12000  cmp1600  cmp16000  cmp1800  cmp18000  cmp2000  cmp20000  cmp2200  cmp2400  cmp2600  cmp2800  cmp3200  cmp3400  cmp3600  cmp3800  cmp4000  cmp4200  cmp4400  cmp4600  cmp4800  cmp5000  cmp5200  cmp5400  cmp5600  cmp5800  cmp600  cmp6200  cmp6400  cmp6600  cmp7200  cmp7400  cmp7600  cmp7800  cmp800  cmp8000  cmp8200  cmp8800  cmp9000  (+3 more)
mama/resp/nai2012/: alfna12C_widetime.m  alfna13C_widetime.m  alfna28si_widetime.m  alfna56Fe_widetime.m  exp_resp.xlsx  raw1238  raw1779  raw2839  raw3089  raw360  raw4497  raw6130  raw847  raw9900  sc1238  sc15000  sc1779  sc2839  sc3089  sc360  sc4497  sc6130  sc847  sc9900
mama/resp/nai_old/: RESP-EXP-1173  RESP-EXP-122  RESP-EXP-1333  RESP-EXP-15110  RESP-EXP-1836  RESP-EXP-245  RESP-EXP-2615  RESP-EXP-344  RESP-EXP-4439  RESP-EXP-511  RESP-EXP-6130  RESP-EXP-662
mama/resp/oscar2017/: cmp1000  cmp10000  cmp10200  cmp1200  cmp1400  cmp1600  cmp1800  cmp200  cmp2000  cmp2200  cmp2400  cmp2600  cmp2800  cmp3000  (+37 more)
mama/spy/: Makefile  README
mama/src/: Makefile  minig_custom.c
mama/update/: Makefile  README  minig_custom.c
(+3374 files in other folders)
